--- a/introduccion.tex
+++ b/introduccion.tex
@@ -1,2 +1,15 @@
 \chapter{Introducci\'on}
 \label{cap:introduccion}
+
+A medida que el software se está volviendo más ubicuo gracias a los rápidos avances en tecnología, garantizar la corrección funcional del software es más crucial que nunca. Sin embargo, a menudo sucede que se lanza software defectuoso al mercado, lo que causa al menos inconvenientes a los usuarios finales. Para abordar este problema, un área de investigación de creciente importancia es la del análisis de software automatizado, cuyo objetivo es ayudar a los ingenieros, a través de la provisión de herramientas para el análisis automatizado, a encontrar deficiencias tanto en el software como en los modelos relacionados con el software. La generación automatizada de pruebas [TODO], la verificación de modelos de software [TODO] y los análisis estáticos [TODO], entre muchos otros, son enfoques destacados en esta línea de investigación.
+
+
+----------
+
+En las prácticas actuales de desarrollo de software, las pruebas de software son el enfoque más utilizado para encontrar fallos en el software. Las pruebas permiten a los desarrolladores encontrar y corregir fallos antes de los lanzamientos, mejorando la fiabilidad del producto de software \cite{Ammann16,Myers11}. Sin embargo, las pruebas manuales son muy costosas: se deben asignar un número significativo de horas de trabajo de los desarrolladores para llevar a cabo pruebas de manera efectiva, y su alcance a menudo está muy limitado por el presupuesto del proyecto \cite{Ammann16,Myers11}. Por lo tanto, no es raro que se lance software con fallos desconocidos para los desarrolladores.
+
+Los enfoques automatizados de generación de pruebas tienen como objetivo ayudar a los desarrolladores en las tareas de pruebas, por ejemplo, mediante la generación automática o la facilitación de la creación de conjuntos de pruebas \cite{Cadar08,Luckow14,Fraser11}, o mediante la búsqueda y el informe automático de fallos \cite{Pacheco07,Ma15,Godefroid05,Marinov01,Boyapati02,Godefroid12}. Muchos enfoques para encontrar fallos implican algún componente aleatorio, que evita la exploración sistemática del espacio de comportamientos y mejora la eficiencia de la generación de pruebas \cite{Pacheco07,Ma15,Fraser11}. Si bien estos enfoques han sido muy útiles para encontrar una gran cantidad de errores en el software, generalmente no pueden proporcionar garantías, incluso parciales, de que se exploran ciertas familias de comportamientos de software. Por lo tanto, algunos enfoques alternativos tienen como objetivo explorar sistemáticamente un número muy grande de ejecuciones de un software en prueba (SUT), con el objetivo de proporcionar garantías más sólidas sobre la ausencia de errores en el SUT \cite{Marinov01,Boyapati02,Godefroid05,Godefroid18}. Uno de estos enfoques es la generación de entradas exhaustivas acotadas \cite{Marinov01,Boyapati02}. Dada una especificación de las entradas válidas de un SUT, a menudo llamada \texttt{repOK}, la generación exhaustiva acotada de entradas consiste en crear todas las estructuras válidas que satisfacen \texttt{repOK} utilizando dominios de datos acotados. Varios análisis experimentales muestran que los enfoques exhaustivos acotados son efectivos para revelar fallos de software.
+
+Además, la llamada \emph{hipótesis de alcance pequeño} --que establece que la mayoría de los defectos de software se pueden descubrir ejecutando la SUT en "entradas pequeñas"-- sugiere que los enfoques exhaustivos acotados brindan un alto grado de confianza sobre la ausencia de defectos en la SUT \cite{Andoni02}. La desventaja es que estos enfoques tienen que lidiar con la generación de una cantidad de estructuras que a menudo crece exponencialmente con respecto a los límites de generación (llamados a menudo \emph{alcances}), y con la exploración de un espacio de búsqueda combinatorio que incluye una gran cantidad de estructuras inválidas (es decir, que no satisfacen \texttt{repOK}) y estructuras isomórficas. Por lo tanto, la poda del espacio de búsqueda y la eliminación de estructuras isomórficas son clave para hacer que los enfoques exhaustivos acotados sean escalables en la práctica.
+
+Enfoques previos de exhaustividad acotada requieren un \texttt{repOK} escrito en un lenguaje lo suficientemente expresivo como para describir con precisión las propiedades de las entradas \cite{Marinov01, Boyapati02}. Los objetivos más comunes de estos enfoques han sido representaciones de clases complejas, como colecciones asignadas en el montón con restricciones estructurales complejas (listas enlazadas, árboles, etc.). Se han utilizado varios lenguajes de especificación para describir el \texttt{repOK}, por ejemplo, la lógica relacional (en el denominado estilo declarativo) empleada por \textsf{TestEra} \cite{Marinov01}; y el código fuente en un lenguaje de programación imperativo (en el denominado estilo operacional) utilizado por \textsf{Korat} \cite{Boyapati02}. En cualquier caso, conseguir las especificaciones correctas, en cualquier lenguaje, consume tiempo y es propenso a errores. Las especificaciones sobredimensionadas pueden llevar a saltarse partes relevantes del espacio de estado de las entradas válidas durante el análisis; por otro lado, las especificaciones infradimensionadas pueden llevar a falsos fallos, es decir, a generar entradas que desencadenan fallos, pero que de hecho son inválidas y no representan errores reales (reproducibles). Además, las especificaciones rara vez están disponibles junto con el software, e incluso cuando lo están, los enfoques de análisis exhaustivo acotado específicos, como \textsf{Korat} y \textsf{TestEra}, requieren que se escriban de maneras bastante específicas para permitir que las herramientas correspondientes generen entradas de manera eficiente.
